# lazyverdi

./: .gitignore  .pre-commit-config.yaml  LICENSE  README-CN.md  README.md  demo_workflows.py  main.py  pyproject.toml
.github/workflows/: publish.yml
src/lazyverdi/: __init__.py  app.py
src/lazyverdi/commands/: __init__.py  base.py  formatters.py  parsers.py
src/lazyverdi/core/: __init__.py  batch_loader.py  config.py  runner.py
src/lazyverdi/ui/: __init__.py
src/lazyverdi/ui/panels/: __init__.py  command_panel.py  info_panel.py  modals.py  results_panel.py  status_panel.py  table_panel.py
tests/: conftest.py  test_app.py  test_batch_loader.py  test_config.py  test_runner.py
tests/commands/: __init__.py  test_formatters.py  test_parsers.py  test_registry.py
tests/ui/: __init__.py  test_modals.py  test_panels.py
